# open-voice

./: .gitignore  LICENSE  README.md
backend/: Makefile  README.md  pyproject.toml
backend/src/: audio.py  bg_tasks.py  env.py  logger.py  main.py
backend/src/clients/: http.py
backend/src/vad/: __init__.py  utils.py
backend/src/webrtc/: __init__.py  connection.py  input.py  output.py  turn_servers.py
